# dagger-poc

./: .gitmodules  README.md  dagger.json
.github/workflows/: basic_container_dagger.yml  container_dagger.yml  github_actions_build_and_test.yml  local_module.yml  local_submodule_build_and_test.yml  local_submodule_functions.yml  local_submodule_module.yml  remote_module.yml  remote_module_multiple_calls.yml  remote_module_multiple_jobs.yml  remote_module_only_once.yml  remote_module_only_once_1.yml  remote_module_with_cloud.yml  remote_module_without_install.yml  run_basic_container_dagger.yml  run_basic_python_tests_dagger.yml  run_dagger.yml
cicd/: basic_container.py  basic_python_tests.py  main.py
dagger-module/: dagger.json  pyproject.toml
dagger-module/src/cicd/: __init__.py  main.py  main_cicd.py
java-app/src/main/java/: Main.java
java-app/src/test/java/com/: MainTest.java
next-app/: package.json
python-app/: pytest.ini  tasks.py
python-app/tests/: test_main.py
