[project]
name = "cicd"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["dagger-io"]

[build-system]
requires = ["hatchling==1.25.0"]
build-backend = "hatchling.build"

#[project.entry-points."dagger.mod"]
#main_object = 'cicd:Cicd'

[tool.uv.sources]
dagger-io = { path = "sdk", editable = true }
